# design-patterns

./: .gitmodules  README.md
.github/workflows/: ubuntu.yaml
cpp/: CMakeLists.txt  README.md  main.cpp  test.sh
cpp/inc/creational/factory/: factory.hpp  product.hpp  product_a.hpp  product_b.hpp
cpp/src/creational/: CMakeLists.txt
cpp/src/creational/factory/: product_a.cpp  product_b.cpp
cpp/tests/: CMakeLists.txt  factory_test.cpp
